<resources>
    <string name="app_name">Food Tracker</string>
    <string name="title_shopping">Shopping</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_meal_plan">Meal Plan</string>
    <string name="title_ingredients">Ingredients</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_nav_bar_item">A menu navbar item</string>
    <string name="plus_icon">+</string>
    <string name="name">Name</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="category">Category</string>
    <string name="location">Location</string>
    <string name="unit">Unit</string>
    <string name="amount">Amount</string>
    <string name="delete_button">Delete</string>
    <string name="edit_button">Edit</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_servings">Servings</string>
    <string name="recipe_preptime">Prep Time</string>
    <string name="recipe_category">Category</string>
    <string name="recipe_details">Recipe Details</string>
    <string name="add_icon">+</string>
    <string name="back_button_description">Back button that returns to the main menu</string>
    <string name="singleton_list_add">Add an element to a list</string>
    <string name="add_ingredient_location">Add Ingredient Location</string>
    <string name="add_ingredient_category">Add Ingredient Category</string>
    <string name="description">Description</string>
    <string name="unit_of_measurement">Unit of measurement</string>
    <string name="quantity">Quantity</string>
    <string name="set_expiry_date">Expiry Date</string>
    <string name="pick_ingredient_category">Pick ingredient category</string>
    <string name="pick_ingredient_location">Pick ingredient location</string>
    <string name="sort_by">Sort by:</string>
    <string name="sort_ingredient">Sort Ingredient</string>
    <string name="changes_sorting_direction">Changes sorting direction</string>
    <string name="add_recipe_image_description">add_recipe_image</string>
    <string name="recipe_image_description">Recipe image</string>
    <string name="pick_recipe_category">Pick recipe category</string>
    <string name="title_activity_edit_recipe">EditRecipeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="preparation_time_title">Preparation Time:</string>
    <string name="servings_title">Servings:</string>
    <string name="category_title">Category:</string>
    <string name="ingredients">Ingredients</string>
    <string name="comments">Comments</string>
    <string name="pick_ingredient_unit">Pick ingredient unit</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="title">Title</string>
    <string name="servings">Servings</string>
    <string name="preparation_time_minutes_descriptor">Preparation time (minutes)</string>
    <string name="remove_icon_text">X</string>
    <string name="amount_abbreviation">Amt.</string>
    <string name="no_ingredients">No ingredients</string>
    <string name="group_arrow">Group arrow</string>
    <string name="add_from_gallery">Add from gallery</string>
    <string name="add_from_camera">Add from camera</string>
    <string name="edit_recipe">Edit recipe</string>
    <string name="add_recipe">Add recipe</string>
    <string name="remove_image_from_recipe">Remove image from recipe</string>
    <string name="remove_image">Remove image</string>
    <string name="warning_icon_notifying_missing_information_on_the_ingredient">Warning icon notifying missing information on the ingredient</string>
    <string name="missing_fields">Missing fields</string>
    <string name="day">Day</string>
    <string name="deletes_a_meal_plan_day">Deletes a meal plan day</string>
    <string name="add_recipe_button">+ Recipe</string>
    <string name="add_ingredient_button">+ Ingredient</string>
</resources>