<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:importantForAutofill="noExcludeDescendants"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="1"
            android:text="@string/name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ingredientDescription"
            style="@style/inputField"
            android:hint="@string/name"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="1"
            android:text="@string/amount"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ingredientQuantity"
            style="@style/inputField"
            android:hint="@string/amount"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/background"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/primary_dark"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/unit_of_measurement"
            android:textColor="@color/background_light" />

        <Spinner
            android:id="@+id/ingredientUnit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pick_ingredient_unit" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/primary_dark"
        android:layout_marginHorizontal="16dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/category"
        android:textColor="@color/background_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="16dp"
        android:paddingHorizontal="16dp"
        android:background="@color/background"
        android:weightSum="1">

        <Spinner
            android:id="@+id/ingredientCategory"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:hint="@string/pick_ingredient_category" />

        <Button
            android:id="@+id/smaller_add_ingredient_category"
            style="@style/textButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="@android:color/transparent"
            android:text="@string/add_icon"
            android:textAlignment="viewEnd"
            android:textColor="@color/primary_dark"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>