<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:importantForAutofill="noExcludeDescendants"
    tools:ignore="NestedWeights">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/topBarContainerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/top_bar" />

        <!-- Image and modification -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:weightSum="1">

            <ImageView
                android:id="@+id/recipe_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:adjustViewBounds="true"
                android:background="@color/background_dark"
                android:contentDescription="@string/recipe_image_description"
                android:maxHeight="160dp"
                android:paddingVertical="64dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:background="@color/background_light"
                android:baselineAligned="false"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/recipe_add_image_from_camera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="16dp"
                        android:background="@drawable/circular_background"
                        android:contentDescription="@string/add_recipe_image_description"
                        android:src="@drawable/ic_baseline_camera_alt_24"
                        app:tint="@color/background_light" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_from_camera"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/recipe_add_image_from_gallery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="16dp"
                        android:background="@drawable/circular_background"
                        android:contentDescription="@string/add_recipe_image_description"
                        android:src="@drawable/ic_baseline_image_search_24"
                        app:tint="@color/background_light" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_from_gallery"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/recipe_remove_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="16dp"
                        android:background="@drawable/circular_background"
                        android:contentDescription="@string/remove_image_from_recipe"
                        android:src="@drawable/ic_baseline_delete_24"
                        app:tint="@color/background_light" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remove_image"
                        android:textAlignment="center" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:text="@string/title"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/recipe_title"
                style="@style/inputField"
                android:hint="@string/title"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:text="@string/preparation_time_minutes_descriptor"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/recipe_prep_time"
                style="@style/inputField"
                android:hint="@string/preparation_time_minutes_descriptor"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:text="@string/servings"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/recipe_servings"
                style="@style/inputField"
                android:hint="@string/servings"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/background_dark"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/primary_dark"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:text="@string/category"
                android:textColor="@color/background_light" />

            <Spinner
                android:id="@+id/recipe_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pick_recipe_category" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp">

            <TextView
                style="@style/textHeader2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ingredients" />

            <Button
                android:id="@+id/addIngredient"
                style="@style/textButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/add_icon"
                android:textAlignment="viewEnd"
                android:textColor="@color/primary_dark"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/no_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/no_ingredients"
            android:textColor="@color/primary" />

        <LinearLayout
            android:id="@+id/ingredientHeaders"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:background="@color/primary_dark"
            android:orientation="horizontal"
            android:paddingHorizontal="8dp"
            android:paddingVertical="16dp"
            android:visibility="gone"
            android:weightSum="1">

            <TextView
                android:id="@+id/recipeDisplayDescriptionHeader"
                style="@style/textBody"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:text="@string/description"
                android:textColor="@color/background_light"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/recipeDisplayAmountHeader"
                style="@style/textBody"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:text="@string/amount_abbreviation"
                android:textColor="@color/background_light"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/recipeDisplayUnitHeader"
                style="@style/textBody"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.20"
                android:text="@string/unit"
                android:textColor="@color/background_light"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/recipeDisplayCategoryHeader"
                style="@style/textBody"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="@string/category"
                android:textColor="@color/background_light"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipe_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@color/background_dark"
            android:paddingHorizontal="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:text="@string/comments"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/recipeComments"
                style="@style/inputField"
                android:hint="@string/comments"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <Button
                android:id="@+id/recipes_cancel"
                style="@style/textButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/recipes_confirm"
                style="@style/textButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
